# simple_trajectory

./: CMakeLists.txt  package.xml
launch/: simple_trajectory.launch
src/: simple_trajectory.cpp
