<?xml version="1.0"?>
<package format="2">
  <name>simple_trajectory</name>
  <version>0.0.1</version>
  <description>Package which create a simple trajectory</description>
  <author>Kévin Bolloré</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>fanuc_grinding_post_processor</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>fanuc_grinding_post_processor</exec_depend>
</package>
